storage manager and cache

--- a/server/web/index.html
+++ b/server/web/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
   <div class="container">
     <h1>📂 Server File Manager</h1>
+    <h2>Upload</h2>
+    <input type="file" id="fileInput">
+    <button onclick="uploadFile()">Upload</button>
     <div class="controls">
       <button onclick="listFiles()">🔄 Refresh</button>
     </div>
